added new command syntax

--- a/05-modularization.tex
+++ b/05-modularization.tex
@@ -14,66 +14,68 @@
 
 
 
-\begin{abstract}
-This document describes the use of latex for creating a document. The document is divided into various sections that describe
-how to add and/or customize various parts of a document. For example, In order to add abstract, we create a new environment 
-using \verb+ \begin{abstract} + and \verb+ \end{abstract} + and put the contents of the abstract inside the abstract environment.
-\end{abstract}
-
-\newpage
-\tableofcontents
-
-\newpage
-\listoftables
-\listoffigures
-\newpage
-
-\section{Adding Section}
-To add a section just use \verb+\section +
-
-\subsection{Adding Subsection}
-The command to add a subsection is very similar to that of section. The only difference being instead of 
-section we write subsection \verb+\subsection +
-
-\subsubsection{Adding Sub Subsection}
-The above method can be further extended to add sub subsection. 
-
-\input{"06-addingContentFromaFile.tex"}
-
-\input{"wordFormatting.tex"}
-
-\input{"list.tex"}
-
-\input{"table.tex"}
-
-\input{"figure.tex"}
-
-\input{"tableReference.tex"}
-
-\input{"figReference.tex"}
-
-\input{"maths.tex"}
-
-\input{"crossReferencing.tex"}
-
-\input{"citation.tex"}
-
-
-
- \begin{thebibliography}{1}
-
-  \bibitem{tex1} D. E. Knuth {\em The tex book }  Addison Wesley 1986.
-
-  \bibitem{tex2}  D. E. Knuth {\em Typesetting concrete mathematics, TUGboat}, April 1989
-
-  \end{thebibliography}
-
-
-
-
-
-
-
+%\begin{abstract}
+%This document describes the use of latex for creating a document. The document is divided into various sections that describe
+%how to add and/or customize various parts of a document. For example, In order to add abstract, we create a new environment 
+%using \verb+ \begin{abstract} + and \verb+ \end{abstract} + and put the contents of the abstract inside the abstract environment.
+%\end{abstract}
+%
+%\newpage
+%\tableofcontents
+%
+%\newpage
+%\listoftables
+%\listoffigures
+%\newpage
+%
+%\section{Adding Section}
+%To add a section just use \verb+\section +
+%
+%\subsection{Adding Subsection}
+%The command to add a subsection is very similar to that of section. The only difference being instead of 
+%section we write subsection \verb+\subsection +
+%
+%\subsubsection{Adding Sub Subsection}
+%The above method can be further extended to add sub subsection. 
+%
+%\input{"06-addingContentFromaFile.tex"}
+%
+%\input{"wordFormatting.tex"}
+%
+\input{"newcommand.tex"}
+%
+%\input{"list.tex"}
+%
+%\input{"table.tex"}
+%
+%\input{"figure.tex"}
+%
+%\input{"tableReference.tex"}
+%
+%\input{"figReference.tex"}
+%
+%\input{"maths.tex"}
+%
+%\input{"crossReferencing.tex"}
+%
+%\input{"citation.tex"}
+%
+%
+%
+% \begin{thebibliography}{1}
+%
+%  \bibitem{tex1} D. E. Knuth {\em The tex book }  Addison Wesley 1986.
+%
+%  \bibitem{tex2}  D. E. Knuth {\em Typesetting concrete mathematics, TUGboat}, April 1989
+%
+%  \end{thebibliography}
+%
+%
+%
+%
+%
+%
+%
 
 
 
